k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knowme
  labels:
    app.kubernetes.io/part-of: knowme-site
