k8s/base/surrealdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: surrealdb
  namespace: knowme
  labels:
    app.kubernetes.io/name: surrealdb
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: knowme-site
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: surrealdb
    app.kubernetes.io/component: database
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
