k8s/base/uar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uar
  namespace: knowme
  labels:
    app.kubernetes.io/name: uar
    app.kubernetes.io/component: app
    app.kubernetes.io/part-of: knowme-site
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: uar
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 6565
      targetPort: http
      protocol: TCP
